--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Vacation Manager</string>
-    <string name="app_title">휴가자 인증 시스템</string>
+    <string name="app_title">휴가 인증서</string>
     <string name="activity_main_register_button">등록신청(병)</string>
     <string name="activity_main_milnum">군번</string>
     <string name="placeholder_birth">생년월일(YYMMDD)</string>
